primeira alteração na cor de fundo e inclusão de paragrafo

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Av.Versionamento</title>
 </head>
 <body>
     <h1>Av.Versionamento</h1>
+    <p>algo aqui</p>
 </body>
 </html>
